# bazel

./: .bazelignore  .bazelrc  BUILD.bazel  README.md  WORKSPACE  gazelle_python.yaml  go.mod  godeps.bzl  nogo.json  pyproject.toml  requirements.in  requirements.txt
cmd/: BUILD.bazel  __main__.py
docker/nginx/: BUILD.bazel  Dockerfile  default.conf
lib/session/: BUILD.bazel  session.go
tools/lint/: BUILD.bazel  lint_all.sh  python.sh  shfmt.sh
